// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`non-pretty: pretty/cte-1.sql 1`] = `"WITH regional_sales AS (SELECT region, sum(sales_amount) AS total_sales FROM sales GROUP BY region) SELECT * FROM regional_sales"`;

exports[`non-pretty: pretty/cte-2.sql 1`] = `"WITH regional_sales AS (SELECT region, sum(sales_amount) AS total_sales FROM sales GROUP BY region), top_regions AS (SELECT region FROM regional_sales WHERE total_sales > 1000000) SELECT * FROM top_regions"`;

exports[`non-pretty: pretty/cte-3.sql 1`] = `"WITH RECURSIVE employee_hierarchy AS (SELECT id, name, manager_id, 1 AS level FROM employees WHERE manager_id IS NULL UNION ALL SELECT e.id, e.name, e.manager_id, eh.level + 1 FROM employees AS e JOIN employee_hierarchy AS eh ON e.manager_id = eh.id) SELECT * FROM employee_hierarchy"`;

exports[`non-pretty: pretty/cte-4.sql 1`] = `"WITH sales_summary AS (SELECT region, product_category, sum(amount) AS total FROM sales GROUP BY region, product_category), regional_totals AS (SELECT region, sum(total) AS region_total FROM sales_summary GROUP BY region) SELECT s.region, s.product_category, s.total, r.region_total FROM sales_summary AS s JOIN regional_totals AS r ON s.region = r.region"`;

exports[`pretty: pretty/cte-1.sql 1`] = `
"WITH 
  regional_sales AS (SELECT
    region,
    sum(sales_amount) AS total_sales
  FROM sales
  GROUP BY
    region)
SELECT *
FROM regional_sales"
`;

exports[`pretty: pretty/cte-2.sql 1`] = `
"WITH 
  regional_sales AS (SELECT
    region,
    sum(sales_amount) AS total_sales
  FROM sales
  GROUP BY
    region),
  top_regions AS (SELECT region
  FROM regional_sales
  WHERE
    total_sales > 1000000)
SELECT *
FROM top_regions"
`;

exports[`pretty: pretty/cte-3.sql 1`] = `
"WITH RECURSIVE 
  employee_hierarchy AS (SELECT
    id,
    name,
    manager_id,
    1 AS level
  FROM employees
  WHERE
    manager_id IS NULL
  UNION
  ALL
  SELECT
    e.id,
    e.name,
    e.manager_id,
    eh.level + 1
  FROM employees AS e
  JOIN employee_hierarchy AS eh ON e.manager_id = eh.id)
SELECT *
FROM employee_hierarchy"
`;

exports[`pretty: pretty/cte-4.sql 1`] = `
"WITH 
  sales_summary AS (SELECT
    region,
    product_category,
    sum(amount) AS total
  FROM sales
  GROUP BY
    region,
    product_category),
  regional_totals AS (SELECT
    region,
    sum(total) AS region_total
  FROM sales_summary
  GROUP BY
    region)
SELECT
  s.region,
  s.product_category,
  s.total,
  r.region_total
FROM sales_summary AS s
JOIN regional_totals AS r ON s.region = r.region"
`;
